--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -7,7 +7,7 @@ button {
 }
 
 .seach__input {
-  width: 300px;
+  width: 280px;
   height: 30px;
   margin: 8px;
   border-radius: 6px;
@@ -25,4 +25,14 @@ button {
 .search__btn:hover {
   color: white;
   background-color: rgb(18, 100, 225);
+}
+
+@media screen and (max-width: 560px) {
+  .seach__input {
+    width: 250px;
+  }
+
+  .search__btn {
+    margin-left: 7px;
+  }
 }
