--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,11 @@
   margin: 0 auto;
   padding: 2rem;
 }
+
+.active {
+  width: 50vw;
+  margin: 0;
+  padding: 2rem;
+  position: absolute;
+  left: 0;
+}
