--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -57,9 +57,10 @@
 .window__text {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 25px;
+  letter-spacing: 0.5px;
 }
 
 .window__span {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 800;
 }
