--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,6 +1,10 @@
 .body__loader {
-  margin-top: 50px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   animation: rotate 1s infinite linear;
+  z-index: 1;
 }
 
 @keyframes rotate {
