feat: add link on home for all pages

--- a/src/pages/FormHook/FormHook.module.css
+++ b/src/pages/FormHook/FormHook.module.css
@@ -1,6 +1,12 @@
-.title {
+.container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+}
+
+.title {
+  /* display: flex;
+  justify-content: center; */
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 30px;
   color: rgb(38, 41, 225);
