--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,15 @@ button {
   font: inherit;
   color: inherit;
   background-color: transparent;
-  /* отображаем курсор в виде руки при наведении; некоторые
-  считают, что необходимо оставлять стрелочный вид для кнопок */
   cursor: pointer;
+}
+
+ul,
+li {
+  margin: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
