--- a/src/components/InputUn/InputUn.module.css
+++ b/src/components/InputUn/InputUn.module.css
@@ -53,3 +53,24 @@ p {
 .btn__submit:hover {
   background-color: rgb(52, 188, 3);
 }
+
+.passwordStrength {
+  margin-bottom: 6px;
+  text-align: left;
+}
+
+.very_weak {
+  color: red;
+}
+
+.weak {
+  color: rgb(181, 46, 89);
+}
+
+.medium {
+  color: rgb(189, 150, 9);
+}
+
+.strong {
+  color: rgb(9, 173, 9);
+}
